--- a/styles/style.css
+++ b/styles/style.css
@@ -1,11 +1,18 @@
 body {
   background-color: #edf3f9;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin: 0;
 }
 
 body .pageWraper {
   background-color: white;
   margin: 0 auto;
-  width: 80%;
+  width: 960px;
   height: 100%;
 }
 
@@ -77,12 +84,14 @@ body .pageWraper .topNav {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  margin: 10px;
+  padding: 10px 10px;
 }
 
-body .pageWraper .topNav img {
-  width: 200px;
-  height: 91px;
+body .pageWraper .topNav .logo {
+  width: 100%;
+  height: 100%;
+  max-width: 200px;
+  max-height: 91px;
   margin: 0 2rem 0 0;
 }
 
@@ -93,16 +102,18 @@ body .pageWraper .topNav .link {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  margin: 0.5rem;
 }
 
 body .pageWraper .topNav .link span {
   font-family: sans-serif;
   font-weight: bold;
-  margin: 3px;
+  font-size: 16px;
 }
 
 body .pageWraper .topNav .link > img {
   width: 10px;
   height: 10px;
+  margin: 0 0 0 0.2rem;
 }
 /*# sourceMappingURL=style.css.map */
