--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,9 +1,12 @@
 body{
     background-color: #edf3f9;
+    display: flex;
+    justify-content: center;
+    margin: 0;
     .pageWraper{
         background-color: white;
         margin: 0 auto;
-        width: 80%;
+        width: 960px;
         height: 100%;
         header{
             background-color: #44667c;
@@ -46,23 +49,28 @@ body{
             display: flex;
             align-items: center;
             justify-content: center;
-            margin: 10px;
-            img{
-                width: 200px;
-                height: 91px;
-                margin: 0 2rem 0 0 ;
+            padding: 10px 10px;
+
+            .logo{
+                width: 100%;
+                height: 100%;
+                max-width: 200px;
+                max-height: 91px;
+                margin: 0 2rem 0 0;
             }
             .link{
                 display: flex;
                 align-items: center;
+                margin: 0.5rem;
                 span{
                     font-family: sans-serif;
                     font-weight: bold;
-                    margin: 3px;
+                    font-size: 16px;
                 }
                 >img{
                     width: 10px;
                     height: 10px;
+                    margin: 0 0 0 0.2rem;
                 }
             }
         }
